tests/snapshots/test__from_fixtures@properties__add.json.snap
---
source: tests/test.rs
expression: diff
input_file: tests/fixtures/properties/add.json
---
[
    Change {
        path: "",
        change: PropertyAdd {
            lhs_additional_properties: true,
            added: "world",
        },
    },
]
