tests/snapshots/test__from_fixtures@properties__change.json.snap
---
source: tests/test.rs
expression: diff
info:
  lhs:
    properties:
      hello:
        type: string
    type: object
  rhs:
    properties:
      hello:
        type: number
    type: object
input_file: tests/fixtures/properties/change.json
---
[
    Change {
        path: ".hello",
        change: TypeRemove {
            removed: String,
        },
    },
    Change {
        path: ".hello",
        change: TypeAdd {
            added: Number,
        },
    },
    Change {
        path: ".hello",
        change: TypeAdd {
            added: Integer,
        },
    },
]
