tests/snapshots/test__from_fixtures@properties__remove.json.snap
---
source: tests/test.rs
expression: diff
info:
  lhs:
    properties:
      hello:
        type: string
      world:
        type: string
    type: object
  rhs:
    properties:
      hello:
        type: string
    type: object
input_file: tests/fixtures/properties/remove.json
---
[
    Change {
        path: "",
        change: PropertyRemove {
            lhs_additional_properties: true,
            removed: "world",
        },
    },
]
